IGNITE-843 Fixed profile UI.

--- a/modules/web-control-center/nodejs/views/admin/userList.jade
+++ b/modules/web-control-center/nodejs/views/admin/userList.jade
@@ -20,8 +20,7 @@ block container
     .greedy.row(ng-controller='adminController')
         .docs-content
             .docs-header
-                h1 Users
-                p List of registered users
+                h1 List of registered users
                 hr
             .docs-body
                 table.table.table-striped(st-table='userListDisplay' st-safe-src='userList')
