# ignite-843 Minor fix.

--- a/modules/web-control-center/nodejs/views/profile.jade
+++ b/modules/web-control-center/nodejs/views/profile.jade
@@ -40,9 +40,10 @@ block container
                             .col-sm-4
                                 input.form-control(type='email' ng-model='profileUser.email' placeholder='you@domain.com' required)
                         .details-row
-                            label
-                                input(type="checkbox" ng-model='profileUser.changePassword')
-                                | Change password
+                            .checkbox
+                                label
+                                    input(type="checkbox" ng-model='profileUser.changePassword')
+                                    | Change password
                         div(ng-show='profileUser.changePassword')
                             .details-row
                                 +lbl('New password:')
