--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -22,8 +22,6 @@ header.header(id='header')
             ul.nav.navbar-nav(ng-controller='activeLink' ng-show='loggedInUser')
                 li
                     a(ng-class="{active: isActive('/configuration')}" href='/configuration/clusters') Configuration
-                li(ng-if='loggedInUser && loggedInUser.admin')
-                    a(ng-class="{active: isActive('/admin')}" href='/admin') Administration
                 li
                     a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
             ul.nav.navbar-nav.pull-right
@@ -34,6 +32,8 @@ header.header(id='header')
                         ul.dropdown-menu
                             li
                                 a(href='/profile') Profile
+                            li(ng-if='loggedInUser && loggedInUser.admin')
+                                a(href='/admin') Admin Panel
                             li
                                 a(href='/logout') Log Out
                 li.nav-login(ng-show='!loggedInUser')
