--- a/modules/web-control-center/nodejs/views/caches.jade
+++ b/modules/web-control-center/nodejs/views/caches.jade
@@ -23,8 +23,7 @@ include includes/controls
 
 block content
     .docs-header
-        h1 Caches
-        p Create and configure Ignite caches.
+        h1 Create and configure Ignite caches
         hr
     .docs-body(ng-controller='cachesController')
         .links(ng-hide='caches.length == 0')
