--- a/modules/web-control-center/nodejs/views/clusters.jade
+++ b/modules/web-control-center/nodejs/views/clusters.jade
@@ -23,8 +23,7 @@ include includes/controls
 
 block content
     .docs-header
-        h1 Clusters
-        p Create and configure Ignite clusters.
+        h1 Create and configure Ignite clusters
         hr
     .docs-body(ng-controller='clustersController')
         .links(ng-hide='clusters.length == 0')
