--- a/modules/web-control-center/nodejs/views/persistence.jade
+++ b/modules/web-control-center/nodejs/views/persistence.jade
@@ -26,8 +26,7 @@ mixin dbcheck(chk)
 
 block content
     .docs-header
-        h1 Persistence
-        p Create and configure Ignite persistence.
+        h1 Create and configure Ignite persistence
         hr
     .docs-body(ng-controller='persistenceController')
         .links(ng-hide='persistences.length == 0')
