--- a/modules/web-control-center/nodejs/views/summary.jade
+++ b/modules/web-control-center/nodejs/views/summary.jade
@@ -32,8 +32,7 @@ append css
 
 block content
     .docs-header
-        h1 Summary
-        p Configurations summary.
+        h1 Configurations summary
         hr
     .docs-body(ng-controller='summaryController')
         div(ng-show='clusters.length == 0')
