--- a/modules/web-control-center/nodejs/views/settings/profile.jade
+++ b/modules/web-control-center/nodejs/views/settings/profile.jade
@@ -14,7 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends templates/layout
+extends ../templates/layout
 
 mixin lbl(txt)
     label.col-sm-2.required.labelFormField #{txt}
