IGNITE-843: Added showInfo() and showError() common functions. WIP on cache type metadata.

--- a/modules/web-control-center/nodejs/views/configuration/persistence.jade
+++ b/modules/web-control-center/nodejs/views/configuration/persistence.jade
@@ -17,7 +17,7 @@
 extends ../templates/layout-sidebar
 
 append scripts
-    script(src='/persistences-controller.js')
+    script(src='/persistence-controller.js')
 
 include ../includes/controls
 
