--- a/modules/web-control-center/nodejs/views/templates/layout-sidebar.jade
+++ b/modules/web-control-center/nodejs/views/templates/layout-sidebar.jade
@@ -16,34 +16,31 @@
 
 extends layout
 
+mixin item(ref, num, txt)
+    li
+        a(ng-class='{active: isActive("#{ref}")}' href='#{ref}')
+            span.fa-stack
+                i.fa.fa-circle-thin.fa-stack-2x
+                i.fa.fa-stack-1x #{num}
+            | #{txt}
+
+mixin subitem(ref, txt)
+    li
+        a(style='font-size: 16px' ng-class='{active: isActive("#{ref}")}' href='#{ref}')
+            span.fa-stack
+                i.fa.fa-stack-2x
+            | #{txt}
+
 block container
     .row
         .col-sm-2.border-right.section-left.greedy
             .sidebar-nav
                 ul.menu(ng-controller='activeLink')
-                    li
-                        a(ng-class="{active: isActive('/configuration/clusters')}" href='/configuration/clusters')
-                            span.fa-stack
-                                i.fa.fa-circle-thin.fa-stack-2x
-                                i.fa.fa-stack-1x 1
-                            | Clusters
-                    li
-                        a(ng-class="{active: isActive('/configuration/caches')}" href='/configuration/caches')
-                            span.fa-stack
-                                i.fa.fa-circle-thin.fa-stack-2x
-                                i.fa.fa-stack-1x 2
-                            | Caches
-
-                    //li
-                    //    a(ng-class="{active: isActive('/persistence')}" href='/persistence') Persistence
-                    //li
-                    //    a(ng-class="{active: isActive('/clients')}" href='/clients') Clients
-                    li
-                        a(ng-class="{active: isActive('/configuration/summary')}" href='/configuration/summary')
-                            span.fa-stack
-                                i.fa.fa-circle-thin.fa-stack-2x
-                                i.fa.fa-stack-1x 3
-                            | Summary
+                    +item('/configuration/clusters', 1, 'Clusters')
+                    +item('/configuration/caches', 2, 'Caches')
+                    //+subitem('/configuration/metadata', 'Metadata')
+                    //+subitem('/configuration/persistence', 'Persistence')
+                    +item('/configuration/summary', 3, 'Summary')
 
         .col-sm-10.border-left.section-right
             .docs-content
