--- a/modules/web-control-center/nodejs/views/includes/header.jade
+++ b/modules/web-control-center/nodejs/views/includes/header.jade
@@ -13,6 +13,9 @@
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
+mixin item(active, ref, txt)
+    li
+        a(ng-class='{active: isActive("#{active}")}' href='#{ref}') #{txt}
 
 header.header(id='header')
     .container
@@ -20,10 +23,10 @@ header.header(id='header')
             a(href='/') Apache Ignite Web Configurator
         .navbar-collapse.collapse(ng-controller='auth')
             ul.nav.navbar-nav(ng-controller='activeLink' ng-show='loggedInUser')
-                li
-                    a(ng-class="{active: isActive('/configuration')}" href='/configuration/clusters') Configuration
-                //li
-                //    a(ng-class="{active: isActive('/sql')}" href='/sql') SQL
+                +item('/configuration', '/configuration/clusters', 'Configuration')
+                //+item('/monitoring', '/monitoring', 'Monitoring')
+                //+item('/sql', '/sql', 'SQL')
+                //+item('/deploy', '/deploy', 'Deploy')
             ul.nav.navbar-nav.pull-right
                 li(ng-show='loggedInUser')
                     a.dropdown-toggle(data-toggle='dropdown' aria-expanded='true' bs-dropdown data-template='user-dropdown' data-placement='bottom-right') {{loggedInUser.username}}
