--- a/modules/web-control-center/nodejs/views/templates/configuration-sidebar.jade
+++ b/modules/web-control-center/nodejs/views/templates/configuration-sidebar.jade
@@ -16,7 +16,7 @@
 
 extends layout
 
-mixin item(ref, num, txt)
+mixin sidebar-item(ref, num, txt)
     li
         a(ng-class='{active: isActive("#{ref}")}' href='#{ref}')
             span.fa-stack
@@ -24,7 +24,7 @@ mixin item(ref, num, txt)
                 i.fa.fa-stack-1x #{num}
             | #{txt}
 
-mixin subitem(ref, txt)
+mixin sidebar-subitem(ref, txt)
     li
         a(style='font-size: 16px' ng-class='{active: isActive("#{ref}")}' href='#{ref}')
             span.fa-stack
@@ -36,11 +36,11 @@ block container
         .col-sm-2.border-right.section-left.greedy
             .sidebar-nav
                 ul.menu(ng-controller='activeLink')
-                    +item('/configuration/clusters', 1, 'Clusters')
-                    +item('/configuration/caches', 2, 'Caches')
-                    //+subitem('/configuration/metadata', 'Metadata')
-                    //+subitem('/configuration/persistence', 'Persistence')
-                    +item('/configuration/summary', 3, 'Summary')
+                    +sidebar-item('/configuration/clusters', 1, 'Clusters')
+                    +sidebar-item('/configuration/caches', 2, 'Caches')
+                    //+sidebar-subitem('/configuration/metadata', 'Metadata')
+                    //+sidebar-subitem('/configuration/persistence', 'Persistence')
+                    +sidebar-item('/configuration/summary', 3, 'Summary')
 
         .col-sm-10.border-left.section-right
             .docs-content
