IGNITE-843: Rename sidebar template.

--- a/modules/web-control-center/nodejs/views/configuration/clusters.jade
+++ b/modules/web-control-center/nodejs/views/configuration/clusters.jade
@@ -14,7 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-extends ../templates/configuration-sidebar
+extends sidebar
 
 append scripts
     script(src='/clusters-controller.js')
