IGNITE-843: Removed pristine invalidation red border.

--- a/modules/web-control-center/nodejs/public/stylesheets/style.less
+++ b/modules/web-control-center/nodejs/public/stylesheets/style.less
@@ -934,7 +934,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-input.ng-dirty.ng-invalid, input.ng-pristine.ng-invalid, button.ng-dirty.ng-invalid, button.ng-pristine.ng-invalid {
+input.ng-dirty.ng-invalid, button.ng-dirty.ng-invalid {
   border-color: @ignite-red;
 
   :focus {
